--- a/.github/workflows/build-and-run-tests.yml
+++ b/.github/workflows/build-and-run-tests.yml
@@ -1,26 +1,37 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them and run tests
-name: Build and Test App
+name: Install Build and Test
 
 on:
   push:
     branches: ['main']
+
   pull_request:
     branches: ['main']
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [20.x]
+
     steps:
-      - run: echo "This job was automatically triggered by ${{ github.event_name }} event."
-      - uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+
+      - name: Install 🪛
+        run: npm ci
+
+      - name: Build 🛠️
+        run: npm run build --if-present
+
+      - name: Test 🚀
+        run: npm test
+
