--- a/.github/workflows/build-and-run-tests.yml
+++ b/.github/workflows/build-and-run-tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node v.${{ matrix.node-version }} ⏳
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
