--- a/.github/workflows/build-and-run-tests.yml
+++ b/.github/workflows/build-and-run-tests.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Build 🛠️
         run: npm run build --if-present
 
-      - name: Test 🚀
+      - name: Test 🧪
         run: npm test
 
+      - name: Deploy 🚀
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
